--- a/index.css
+++ b/index.css
@@ -77,6 +77,7 @@ body{
     }
     
 }
+/*
 @media(max-width:600px){
     #description{
         font-size: 18px;
@@ -93,3 +94,4 @@ body{
         font-size: 18px;;
     }
 }
+*/
