--- a/index.css
+++ b/index.css
@@ -5,8 +5,9 @@
 body{
     background-image: linear-gradient(135deg, rgb(248, 142, 158), #c6abff)
     ;
-    display: grid;
-   grid-template-rows: 8% 84% 8%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     padding: 0px;
     min-height: 100vh;
 }
@@ -18,7 +19,7 @@ body{
     /* width: 60vw; */
     margin: auto;
     border-radius: 8px;
-    height: 100%;
+ 
 }
 #main-header{
     background-color: rgba(255, 255, 255, 0.8);
@@ -68,18 +69,7 @@ body{
     font-family: 'Quicksand', sans-serif;
 }
 
-@media(max-width:1200px){
-    body{
-
-        grid-template-rows: 8% 97% 8%;
-    }
-    #content{
-        width:90%;
-    }
-    
-}
-
-@media(max-width:800px){
+@media(max-width:400px){
     #description{
         font-size: 40px;
 
