--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ body{
     flex-direction: column;
     justify-content: space-between;
     padding: 0px;
-    min-height: 100vh;
+    height: 100vh;
 }
 #main{
     display: flex;
